<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.reactome.server.tools</groupId>
    <artifactId>sbml-exporter</artifactId>
    <version>2.2.0</version>
    <packaging>jar</packaging>

    <name>sbml-exporter</name>
    <url>http://maven.apache.org</url>

    <properties>
        <graph.core>2.0.0</graph.core>
        <sbml.lib.version>1.5</sbml.lib.version>
        <jasp.version>2.1</jasp.version>
        <junit.version>5.8.0-M1</junit.version>
        <mysql.connector.version>8.0.25</mysql.connector.version>
        <jdom.version>1.1.3</jdom.version>

        <jdk.version>11</jdk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.class>org.reactome.server.tools.sbml.Main</main.class>

        <spring.boot.version>2.5.3</spring.boot.version>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <maven.jar.version>3.2.0</maven.jar.version>
    </properties>

    <developers>
        <developer>
            <id>fabregat</id>
            <name>Antonio Fabregat</name>
            <email>fabregat@ebi.ac.uk</email>
            <organization>http://www.ebi.ac.uk/</organization>
        </developer>
        <developer>
            <id>ksidiro</id>
            <name>Kostas Sidiropoulos</name>
            <email>ksidiro@ebi.ac.uk</email>
            <organization>http://www.ebi.ac.uk/</organization>
        </developer>
        <developer>
            <id>skeating</id>
            <name>Sarah Keating</name>
            <email>skeating@ebi.ac.uk</email>
            <organization>http://www.ebi.ac.uk/</organization>
        </developer>
    </developers>

    <dependencies>
        <!-- Mysql Connector -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql.connector.version}</version>
        </dependency>

        <dependency>
            <groupId>org.reactome.base</groupId>
            <artifactId>reactome-base</artifactId>
            <version>2.1.0-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.xmlgraphics</groupId>
                    <artifactId>batik-awt-util</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.xmlgraphics</groupId>
                    <artifactId>batik-constants</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.xmlgraphics</groupId>
                    <artifactId>batik-dom</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.xmlgraphics</groupId>
                    <artifactId>batik-i18n</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.xmlgraphics</groupId>
                    <artifactId>batik-svggen</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.xmlgraphics</groupId>
                    <artifactId>batik-util</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>commons-httpclient</groupId>
                    <artifactId>commons-httpclient</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Cannot update JDOM to latest version 2.X duo to the Reactome-base uses JDOM 1.X and cannot update the Reactome-base-->
        <dependency>
            <groupId>org.jdom</groupId>
            <artifactId>jdom</artifactId>
            <version>${jdom.version}</version>
        </dependency>

        <dependency>
            <groupId>org.reactome.server.graph</groupId>
            <artifactId>graph-core</artifactId>
            <version>${graph.core}</version>
        </dependency>

        <!-- SBML lib -->
        <dependency>
            <groupId>org.sbml.jsbml</groupId>
            <artifactId>jsbml</artifactId>
            <version>${sbml.lib.version}</version>
        </dependency>

        <!--JSAP console reader-->
        <dependency>
            <groupId>com.martiansoftware</groupId>
            <artifactId>jsap</artifactId>
            <version>${jasp.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.name}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven.jar.version}</version>
                <executions>
                    <execution>
                        <id>exec-jar</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <classifier>exec</classifier>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-jar</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>org/reactome/server/tools/sbml/Main.class</exclude>
                                <exclude>org/reactome/server/tools/sbml/config/GraphNeo4jConfig.class</exclude>
                                <exclude>**/logback.xml</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring.boot.version}</version>
                <configuration>
                    <mainClass>${main.class}</mainClass>
                    <classifier>exec</classifier>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <!-- EBI repo -->
        <repository>
            <id>nexus-ebi-repo</id>
            <name>The EBI internal repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <!-- EBI SNAPSHOT repo -->
        <repository>
            <id>nexus-ebi-snapshot-repo</id>
            <name>The EBI internal snapshot repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>

        <!-- SBML repo -->
        <repository>
            <id>ebi-repo</id>
            <name>The EBI repository</name>
            <url>https://www.ebi.ac.uk/~maven/m2repo</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>

        <!-- BioJava repo -->
        <repository>
            <id>biojava-legacy-repo</id>
            <name>BioJava's Git based legacy maven repo</name>
            <url>https://github.com/biojava/maven-repo/raw/master/</url>
        </repository>

    </repositories>

    <!--Configures the distribution to nexus repository -->
    <distributionManagement>
        <!-- EBI repo -->
        <repository>
            <id>pst-release</id>
            <name>EBI Nexus Repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
        </repository>
        <!-- EBI SNAPSHOT repo -->
        <snapshotRepository>
            <uniqueVersion>false</uniqueVersion>
            <id>pst-snapshots</id>
            <name>EBI Nexus Snapshots Repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
